# email-assistant-openenv

./: Dockerfile  README.md  app.py  dockerfile  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt  server.py
env/: environment.py  grader.py  models.py  tasks.py
environment/: env.py  models.py
environments/: env.py
server/: app.py
