[project]
name = "file-audit-env"
version = "0.1.0"
description = "Real-world file auditing environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core",
    "openai",
]

# This is the "server entry point" the error mentioned
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"